added chapters 2.1 and 2.2

--- a/paper/zavrsni.tex
+++ b/paper/zavrsni.tex
@@ -1,5 +1,7 @@
 \documentclass[times, utf8, zavrsni]{fer}
 \usepackage{booktabs}
+\usepackage{algorithm,algpseudocode}
+\usepackage{lipsum}
 
 \begin{document}
 
@@ -24,7 +26,7 @@
 
 \chapter{Introduction}
 
-\chapter{TODO title - theory}
+\chapter{Theoretical background}
 
 \input{Context_Free_Grammars}
 
@@ -32,20 +34,25 @@
 
 \input{Grammatical_Evolution}
 
-\chapter{TODO title - implementation}
+\chapter{Evolving cache replacement policies}
 
 \input{Cache_Replacement_Policies}
 
 \input{Grammar}
 
-\input{Architecture}
-
-\chapter{Results}
+\chapter{Experimental results}
 
 \chapter{Conclusion}
 
+
 \bibliography{literatura}
 \bibliographystyle{fer}
+
+
+\appendix
+\chapter{Sofware architecture}
+Appendix A Body
+
 
 \begin{sazetak}
 Sažetak na hrvatskom jeziku.
