--- a/paper/literatura.bib
+++ b/paper/literatura.bib
@@ -14,7 +14,27 @@
 
 @Book{eiben2015evolutionarycomputing,
 	author = {Eiben, A. E. and Smith, J. E.},
-	title = {Introduction to Evolutionary Comping, 2nd edition},
+	title = {Introduction to Evolutionary Computing, 2nd edition},
 	publisher = {Springer},
 	year = {2015}
+}
+
+@Book{neill2003grammaticalevolution,
+	author = {O'Neill, Michael and Ryan, Conor},
+	title = {Grammatical Evolution: Evolutionary Automatic Programming in an Arbitrary Language},
+	publisher = {Springer},
+	year = {2003} 
+}
+
+@Article{megane2022coevolutionary,
+	author = {Mégane, Jessica and Lourenço, Nuno and Machado, Penousal},
+	title = {Co-evolutionary Probabilistic Structured Grammatical Evolution},
+	year = {2022}
+}
+
+@Article{lourenco2018structured,
+	author = {Lourenço, Nuno and Assunção, Filipe and Pereira, Francisco B. and Costa, Ernesto and Machado, Penousal},
+	title = {Structured Grammatical Evolution: A Dynamic Approach},
+	publisher = {Springer},
+	year = {2018}
 }
