--- a/paper/literatura.bib
+++ b/paper/literatura.bib
@@ -38,3 +38,16 @@
 	publisher = {Springer},
 	year = {2018}
 }
+
+@Book{silberschatz2018operatingsystem,
+	author = {Silberschatz, Abraham and Galvin, Peter Baer and Gagne, Greg},
+	title = {Operating System Concepts, 10th edition},
+	publisher = {John Wiley and Sons, Inc.},
+	year = {2018}
+}
+
+@Book{cupic2019evolucijskoracunarstvo,
+	author = {Čupić, Marko},
+	title = {Umjetna inteligencija: Evolucijsko računarstvo},
+	year = {2019}
+}
