--- a/paper/zavrsni.tex
+++ b/paper/zavrsni.tex
@@ -6,7 +6,7 @@
 \begin{document}
 
 % TODO: Navedite broj rada.
-\thesisnumber{000}
+\thesisnumber{688}
 
 % TODO: Navedite naslov rada.
 \title{Evolving cache replacement policies using grammatical evolution}
@@ -26,6 +26,8 @@
 
 \chapter{Introduction}
 
+\input{Introduction_Body}
+
 \chapter{Theoretical background}
 
 \input{Context_Free_Grammars}
@@ -40,10 +42,13 @@
 
 \input{Grammar}
 
+\input{Classic_Strategies_As_Grammar}
+
 \chapter{Experimental results}
 
 \chapter{Conclusion}
 
+\input{Conclusion_Body}
 
 \bibliography{literatura}
 \bibliographystyle{fer}
