--- a/paper/Conclusion_Body.tex
+++ b/paper/Conclusion_Body.tex
@@ -1,3 +1,3 @@
-The goal of this thesis was to explore grammatical evolution as a grammar-based approach to genetic programming, study the problem of managing cache in modern computer systems, implement a computer system capable of evolving valid computer programs in an arbitrary language which solve an arbitrary problem, use the built computer system to generate and evolve cache replacement policies using real objective train data, test the generated strategies using real objective test data, and compare the generated strategies against classical heuristic approaches to solving the cache management problem on different cache sizes.
+The goal of this thesis was to explore grammatical evolution as a grammar-based approach to genetic programming, study the problem of managing cache in modern computer systems, implement a software system capable of evolving valid computer programs in an arbitrary language which solve an arbitrary problem, use the built software system to generate and evolve cache replacement policies using real objective train data, test the generated strategies using real objective test data, and compare the generated strategies against classical heuristic approaches to solving the cache management problem on different cache sizes.
 
-Grammatical evolution has proven able to generate cache replacement policies which can match classic heuristic approaches to solving this problem. For future work, it would be interesting to see how different derivatives and improved versions of this algorithm would compare against the simple version of the algorithm used in this thesis.
+Grammatical evolution has proven able to generate cache replacement policies which can match classic heuristic approaches for solving this problem. For future work, it would be interesting to see how different derivatives and improved versions of this algorithm would compare against the simple version of the algorithm used in this thesis.
