--- a/paper/zavrsni.tex
+++ b/paper/zavrsni.tex
@@ -55,8 +55,9 @@
 
 
 \appendix
-\chapter{Sofware architecture}
-Appendix A Body
+\chapter{Software architecture}
+
+\input{Software_Architecture}
 
 
 \begin{sazetak}
