--- a/paper/Context_Free_Grammars.tex
+++ b/paper/Context_Free_Grammars.tex
@@ -1,20 +1,22 @@
 \section{Context-free grammars}
+\subsection{Formal definition}
 A formal grammar is a 4-tuple $G = (V, T, P, S)$ \citep{sipser2013introduction} where
 \begin{list}{$\bullet$}{}  	
 	\item $V$ is a finite set of nonterminal symbols.
-	\item $T$ is finite set of terminal symbols, disjoint from $V$.
-	\item $P$ is finite set of production rules that represent the recursive definition of a language. Each production has three components \citep{hopcroft2007automatatheory}:
+	\item $T$ is a finite set of terminal symbols, disjoint from $V$.
+	\item $P$ is a finite set of production rules that represent the recursive definition of a language. Each production has three components \citep{hopcroft2007automatatheory}:
 		\begin{list}{$\circ$}{}
 			\item head, which consists of one or more terminal and nonterminal symbols.
 			\item production symbol $\rightarrow$.
-			\item body, which consists of zero or more terminal and nonterminal symbols. If the body is empty (consists of zero symbols), we denote that by writing $\epsilon$.
+			\item body, which consists of zero or more terminal and nonterminal symbols. If the body is empty (if it consists of zero symbols), we denote that by writing $\epsilon$.
 		\end{list}
-	\item $S$ is a start nonterminal symbol.
+	\item $S$ is the start nonterminal symbol.
 \end{list}
 
-We can think of the terminal $T$ and nonterminal $V$ symbols as the building blocks of a grammar. Productions $P$ define the rules by which these building blocks substitute each other in the process of building a string. This string belongs to the language which is defined by the grammar. The start symbol $S$ represents the starting building block. The process of building a string starts by applying a production over the start symbol, and this process of applying productions over intermediate strings continues until no more productions can be applied. At that point, the result string is built, and it consists only of elements of the $T$ set, which belong to the alphabet of the language.
+We can think of the terminal $T$ and nonterminal $V$ symbols as the building blocks of the grammar. Productions $P$ define the rules by which these building blocks substitute each other in the process of building a string. This string belongs to the language which is defined by the grammar. The start symbol $S$ represents the starting building block. The process of building a string starts by applying a production over the start symbol, and this process of applying productions over intermediate strings continues until no more productions can be applied. At that point, the result string is built, and it consists only of the elements of the $T$ set, which belong to the alphabet of the language.
 
-The most general grammars, defined only with the aforementioned rules and with no other restrictions, are also called unrestricted grammars. For example, we can define one unrestricted grammar like $G = (\{A, B, C\}, \{a, b, c, d\}, P, A)$ where $P$ contains productions such as:
+\subsection{Formal grammar types}
+The most general grammars, defined only by the aforementioned rules and with no other restrictions, are also called unrestricted grammars. For example, we can define one unrestricted grammar as $G = (\{A, B, C\}, \{a, b, c, d\}, P, A)$ where $P$ contains productions such as:
 \begin{list}{$\bullet$}{}  	
 	\item $AB \rightarrow c$
 	\item $aBdC \rightarrow \epsilon$
@@ -22,7 +24,7 @@ The most general grammars, defined only with the aforementioned rules and with n
 	\item $abba \rightarrow ABBA$
 \end{list}
 
-Context-free grammars are a subset of unrestricted grammars which impose one restriction, that the head of a production is exactly one symbol from the nonterminal symbols $V$. With this restriction, none of the previously written productions can be valid, but we can write productions such as:
+Context-free grammars are a subset of unrestricted grammars which impose one additional restriction, that the head of a production is exactly one symbol from the nonterminal symbols $V$. With this restriction, none of the previously written productions can be valid in a context-free grammar, but we can write productions such as:
 \begin{list}{$\bullet$}{}  	
 	\item $A \rightarrow \epsilon$
 	\item $B \rightarrow a$
@@ -32,4 +34,4 @@ Context-free grammars are a subset of unrestricted grammars which impose one res
 
 Context-free grammars get their name from their property that every nonterminal symbol $A$ from $V$ can be substituted with a string of terminals and nonterminals $S$ if there exists a production rule in $P$ such that $A \rightarrow S$, no matter it's surrounding context in the intermediate string.
 
-Context-free grammars have played a central role in the compiler technology \citep{hopcroft2007automatatheory}. They are used to define syntax rules of a language, as they are expressive enough to allow recursions and other concepts we expect from programming languages, yet they are simple enough to be parsed effectively.
+Context-free grammars have played a central role in the development of the compiler technology \citep{hopcroft2007automatatheory}. They are used to define syntax rules of a language, as they are expressive enough to allow recursions, nesting and other concepts we expect from programming languages, yet they are simple enough to be parsed effectively.
